test_regress/t/t_randomize_method_types_unsup.out
%Error-UNSUPPORTED: t/t_randomize_method_types_unsup.v:10:13: Unsupported: random member variable with the type of the containing class
                                                            : ... note: In instance 't'
   10 |    rand Cls cls;
      |             ^~~
                    ... For error description see https://verilator.org/warn/UNSUPPORTED?v=latest
%Error: Exiting due to
